finished bio page

--- a/week3/w3_bio/hobbies.html
+++ b/week3/w3_bio/hobbies.html
@@ -46,9 +46,14 @@
         </div>
         <hr color="aqua">
         <div id="main-content">
-            <h2 class="title">About Me</h2>
-        <p>My name is <b>Alex Hart</b>. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
-        <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
+            <h2 class="title">Hobbies</h2>
+        <ul>
+            <li>Playing the <i>Acoustic</i> Guitar</li>
+            <li>Painting</li>
+            <li>Listening to Music</li>
+        </ul>
+        <p>Here is a link to one of my favorite albums <em>of all time</em>: <a href="https://open.spotify.com/album/0e9GjrztzBw8oMC6n2CDeI?si=fa1f4ff8c73949d3">The Record - Boygenius</a></p>
+        <img src="images/catPainting.jpg" alt="cat painting by me" width="375" height="500">
         </div>
         <hr color="aqua">
         <div id="footer" class="bg">
