--- a/week3/w3_bio/schools.html
+++ b/week3/w3_bio/schools.html
@@ -38,22 +38,25 @@
     <div id="wrapper" class="bg">
         <div id="header" class="bg">
             <h1 class="title">&#9734;Alexandra Hart - About Me&#9734;</h1>
-        </div>
+        </div> <!--end of header-->
         <div id="nav">
             <a href="index.html"> &#9825;HOME&#9825; </a>
             <a href="schools.html"> &#9825;SCHOOLING&#9825; </a>
             <a href="hobbies.html"> &#9825;HOBBIES&#9825; </a>
-        </div>
+        </div> <!--end of nav-->
         <hr color="aqua">
         <div id="main-content">
-            <h2 class="title">About Me</h2>
-        <p>My name is <b>Alex Hart</b>. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
-        <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
-        </div>
+            <h2 class="title">Schooling</h2>
+            <ul>
+                <li>Cranston Area Career and Technical Center</li>
+                <li>Cranston High School West</li>
+                <li><b>New England Institute of Technology (current)</b></li>
+            </ul>
+        </div> <!--end of main content-->
         <hr color="aqua">
         <div id="footer" class="bg">
             <h4 class="title">&copy;Alex Hart | SE111.05 | Spring 2025</h4>
-        </div>
+        </div> <!--end of footer-->
     </div> <!--end of wrapper-->
     
 </body>
