--- a/week3/w3_bio/hobbies.html
+++ b/week3/w3_bio/hobbies.html
@@ -32,6 +32,10 @@
         .title {
             color:rgb(83, 0, 131)
         }
+
+        hr {
+            color:aqua;
+        }
     </style>
 </head>
 <body>
@@ -44,7 +48,7 @@
             <a href="schools.html"> &#9825;SCHOOLING&#9825; </a>
             <a href="hobbies.html"> &#9825;HOBBIES&#9825; </a>
         </div>
-        <hr color="aqua">
+        <hr>
         <div id="main-content">
             <h2 class="title">Hobbies</h2>
         <ul>
@@ -55,8 +59,9 @@
         <p>Here is a link to one of my favorite albums <em>of all time</em>: <a href="https://open.spotify.com/album/0e9GjrztzBw8oMC6n2CDeI?si=fa1f4ff8c73949d3">The Record - Boygenius</a></p>
         <img src="images/catPainting.jpg" alt="cat painting by me" width="375" height="500">
         </div>
-        <hr color="aqua">
+        <hr>
         <div id="footer" class="bg">
+            <img src="images/hobbies-valid.png" alt="hobbies validation">
             <h4 class="title">&copy;Alex Hart | SE111.05 | Spring 2025</h4>
         </div>
     </div> <!--end of wrapper-->
