--- a/week3/w3_bio/index.html
+++ b/week3/w3_bio/index.html
@@ -32,6 +32,10 @@
         .title {
             color:rgb(83, 0, 131)
         }
+
+        hr {
+            color:aqua;
+        }
     </style>
 </head>
 <body>
@@ -44,14 +48,15 @@
             <a href="schools.html"> &#9825;SCHOOLING&#9825; </a>
             <a href="hobbies.html"> &#9825;HOBBIES&#9825; </a>
         </div>
-        <hr color="aqua">
+        <hr>
         <div id="main-content">
             <h2 class="title">About Me</h2>
         <p>My name is <b>Alex Hart</b>. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
         <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
         </div>
-        <hr color="aqua">
+        <hr>
         <div id="footer" class="bg">
+            <img src="images/index-valid.png" alt="index validation">
             <h4 class="title">&copy;Alex Hart | SE111.05 | Spring 2025</h4>
         </div>
     </div> <!--end of wrapper-->
