--- a/week3/w3_bio/schools.html
+++ b/week3/w3_bio/schools.html
@@ -32,6 +32,10 @@
         .title {
             color:rgb(83, 0, 131)
         }
+
+        hr {
+            color:aqua;
+        }
     </style>
 </head>
 <body>
@@ -44,7 +48,7 @@
             <a href="schools.html"> &#9825;SCHOOLING&#9825; </a>
             <a href="hobbies.html"> &#9825;HOBBIES&#9825; </a>
         </div> <!--end of nav-->
-        <hr color="aqua">
+        <hr>
         <div id="main-content">
             <h2 class="title">Schooling</h2>
             <ul>
@@ -53,8 +57,9 @@
                 <li><b>New England Institute of Technology (current)</b></li>
             </ul>
         </div> <!--end of main content-->
-        <hr color="aqua">
+        <hr>
         <div id="footer" class="bg">
+            <img src="images/schools-valid.png" alt="schools validation">
             <h4 class="title">&copy;Alex Hart | SE111.05 | Spring 2025</h4>
         </div> <!--end of footer-->
     </div> <!--end of wrapper-->
